# agent-reach

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
docs/: ARCHITECTURE.md  DISCUSSION.md  GOALS.md
examples/: test_register.rs
mcp/: Cargo.toml
mcp/src/: main.rs
src/: error.rs  handlers.rs  main.rs  types.rs
